Fixed a UI bug that was causing a scrollbar to appear

--- a/our-custom-styles.css
+++ b/our-custom-styles.css
@@ -11,13 +11,14 @@
 #checkbox-container {
     font-size: 100px;
     position: relative;
-    left: 89%;
+    height: 117px;
 }
 
 #round-checkbox {
     padding-right: 0.3em;
     padding-left: 0.3em;
     color: #ffffff;
+    float: right;
 }
 
 .custom-tile-button {
